# miko-prompt-studio

./: .gitignore  DEVELOPMENT.md  README.md  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: cli.py  config.py  database.py  main.py
backend/app/adapters/: __init__.py  base.py  openai_compat.py  registry.py  vertex.py
backend/app/core/: __init__.py  errors.py  security.py
backend/app/models/: __init__.py  model_config.py  pricing.py  prompt.py  provider_config.py  result_snapshot.py  run.py  sample.py  settings.py  task.py
backend/app/schemas/: __init__.py  common.py  internal_request.py  model_config.py  output_contract.py  pricing.py  prompt.py  provider_config.py  result_snapshot.py  run_record.py  sample_record.py  task.py
backend/app/services/: batch_executor.py  compare_executor.py  contract_validation.py  cost_engine.py  filter_eval.py  html_export.py  image_persist.py  image_preprocess.py  importer.py  input_spec_generator.py  refs.py  (+8 more)
backend/scripts/: test_integration.py
backend/tests/: conftest.py  test_adapter_thinking_params.py  test_api_bundle.py  test_batch_runs.py  test_bundle.py  test_cli_bundle.py  test_compare_runs.py  test_cost_engine.py  test_image_resolution.py  test_importer.py  test_input_spec.py  test_lab_run.py  test_parser_engine.py  test_prompt_contract.py  test_review_analytics.py  test_review_endpoint.py  test_run_history.py  test_sample_mapping.py  test_sample_sets.py  test_streaming.py  test_task_group_persist.py  test_task_group_restart.py  test_tasks.py  test_vertex_adapter.py
(+74 files in other folders)
