[project]
name = "miko-prompt-studio-backend"
version = "0.6.0"
description = "Image annotation lab backend - API, provider adapters, cost engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "Pillow>=10.3.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# ponytail: html_export embeds minified CSS/JS string literals; line length is
# dictated by web content, not Python readability.
"app/services/html_export.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
